# nuc-mcp-server

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  nuc-argocd.md  nuc-certificates.md  nuc-clickhouse.md  nuc-cloudnativepg.md  nuc-elk.md  nuc-envoy-gateway.md  nuc-external-secrets.md  nuc-fluxcd.md  nuc-istio.md  nuc-keda.md  nuc-keycloak-operator.md  nuc-knative.md  nuc-kserve.md  nuc-kube-prometheus-stack.md  nuc-mongodb-percona-operator.md  nuc-mysql-percona-operator.md  nuc-native-gateway.md  nuc-rabbitmq.md  nuc-strimzi-kafka-operator.md  nuc-traefik.md  nuc-valkey.md  nuc-vault-secret-operator.md  nuc-victoria-metrics.md  root-chart.md
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
src/nuc_chart_mcp/: __init__.py  catalog.py  server.py
tests/: test_catalog.py  test_server.py
